--- a/src/Components/Contact/ContactMe.css
+++ b/src/Components/Contact/ContactMe.css
@@ -140,6 +140,8 @@
 
 /* 2. Styles for screens between 1200px and 600px */
 @media screen and (max-width: 1200px) and (min-width: 650px) {
+    .contact__container {margin-bottom: 10.5rem;}
+    
     .contact__heading {
         font-size: var(--tab-h4-font-size);
         line-height: (--tab-h4-line-height);
@@ -192,9 +194,9 @@
 }
 
 /* 3. Styles for screens below 600px */
-@media screen and (max-width: 650px) and (min-width: 520px) {
+@media screen and (max-width: 600px) {
     .contact__container {
-        padding: 0 4rem;
+        padding: 0 1.5rem;
         margin-bottom: 6rem;
     }
 
@@ -206,6 +208,7 @@
 
     .left__contact {
         gap: 2rem;
+        padding: 2rem 1rem;
 
     }
 
@@ -214,8 +217,14 @@
         line-height: var(--mobile-h5-line-height);
     }
 
+    .email__label{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
     .contact__description {
-        font-size: var(--mobile-p-font-size);
+        font-size: 1rem;
         line-height: var(--mobile-p-line-height);
 
     }
@@ -266,74 +275,3 @@
 
 
 /* 3. Styles for screens below 600px */
-@media screen and (max-width: 520px) {
-    .contact__container {
-        padding: 0 1.5rem;
-        margin-bottom: 6rem;
-    }
-
-    .contact__heading {
-        font-size: var(--mobile-h4-font-size);
-        line-height: (--mobile-h4-line-height);
-
-    }
-
-    .left__contact {
-        gap: 2rem;
-
-    }
-
-    .contact__label {
-        font-size: 14px;
-        line-height: 14px;
-    }
-
-    .contact__description {
-        font-size: 14px;
-        line-height: 14px;
-
-    }
-
-    .contact__bottom {
-        flex-direction: column;
-    }
-
-    .google__map {
-        width: 100%;
-        height: 18.75rem;
-    }
-
-    .icon__container {
-        height: 2rem;
-        width: 2rem;
-    }
-
-    .contact__icons {
-        height: 1rem;
-        width: 1rem;
-    }
-
-    .form__label {
-        font-size: 18px;
-        line-height: 26px;
-    }
-
-    .form__input {
-        font-size: 18px;
-        line-height: 26px;
-    }
-
-    .send__form__btn {
-        padding: 16px 32px;
-    }
-
-    .send__text {
-        font-size: var(--mobile-h6-font-size);
-        line-height: var(--mobile-h6-line-height);
-    }
-
-    .send__btn__icon {
-        height: 1.5rem;
-        width: 1.5rem;
-    }
-}
