--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -56,6 +56,13 @@
     border-radius: 300px;
 }
 
+.header__image{
+    width: 50px;
+
+
+    height: 50px;
+}
+
 .border__radius:hover {
     box-shadow: 0px 7.882175445556641px 6.3057403564453125px 0px #261f221a;
 }
